--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -11,6 +11,11 @@
 			"src": "/android-chrome-192x192.png",
 			"sizes": "192x192",
 			"type": "image/png"
+		},
+		{
+			"src": "/Logo2@2x.png",
+			"sizes": "880x370",
+			"type": "image/png"
 		}
 	],
 	"start_url": ".",
