--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,18 +3,13 @@
 	"name": "WhaTicket",
 	"icons": [
 		{
-			"src": "/android-chrome-192x192.png",
-			"sizes": "192x192",
-			"type": "image/png"
-		},
-		{
-			"src": "/Logo2@2x.png",
+			"src": "/Logo.png",
 			"sizes": "880x370",
 			"type": "image/png"
 		},
 		{
 			"src": "favicon.ico",
-			"sizes": "256x108",
+			"sizes": "256x237",
 			"type": "image/x-ico"
 		}
 	],
